Part 1 HW2 complete :)

--- a/HW#2 Due Date Feb 13/HW2_ECE601/Question3_partb.ipynb
+++ b/HW#2 Due Date Feb 13/HW2_ECE601/Question3_partb.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "id": "b3486936",
       "metadata": {
         "id": "b3486936"
@@ -46,8 +46,8 @@
         }
       ],
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "#from google.colab import drive\n",
+        "#drive.mount('/content/drive')"
       ]
     },
     {
@@ -59,7 +59,7 @@
       },
       "outputs": [],
       "source": [
-        "data = np.load('/content/drive/MyDrive/Colab Notebooks/UMass_ECE601_Spring24/HW2_part1/arrays_2.npz')"
+        "#data = np.load('/content/drive/MyDrive/Colab Notebooks/UMass_ECE601_Spring24/HW2_part1/arrays_2.npz')"
       ]
     },
     {
@@ -71,11 +71,11 @@
       },
       "outputs": [],
       "source": [
-        "# save_directory = 'C:\\Data'\n",
-        "# npz_file_path = os.path.join(save_directory, 'arrays.npz')\n",
+        "save_directory = 'C:\\Data'\n",
+        "npz_file_path = os.path.join(save_directory, 'arrays.npz')\n",
         "\n",
         "# Load the arrays from the file\n",
-        "# data = np.load(npz_file_path)"
+        "data = np.load(\"/home/achin/Documents/git repos/ECE601/HW#2 Due Date Feb 13/HW2_ECE601/arrays_2.npz\")"
       ]
     },
     {
@@ -622,7 +622,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -636,7 +636,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": "3.13.1"
     }
   },
   "nbformat": 4,
